--- a/index.html
+++ b/index.html
@@ -192,27 +192,25 @@
         <div class="row mt-4" id="contact">
             <div class="col-lg-12">
                 <h4 class="mb-3">Contact Us</h4>
-                <p><i class="fas fa-user"></i> Support: <a class="text-decoration-none" href="mailto:info@domiboard.com">info@domiboard.com</a></p>
+                <p><i class="fas fa-envelope"></i> <a class="text-decoration-none" href="mailto:support@domiboard.com">Support@domiboard.com</a></p>
             
                 <div class="container">
                     <div class="row">
                       <div class="col-md-12">
                         <ul class="list-inline">
                           <li class="list-inline-item">
-                            <a href="https://www.facebook.com/yourpage" target="_blank"><i class="fab fa-facebook fa-1x"></i></a>
+                            <a href="https://www.facebook.com/domiboard" target="_blank"><i class="fab fa-facebook fa-1x"></i></a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://tiktok.com/yourhandle" target="_blank"><i class="fa-brands fa-tiktok fa-1x" style="color: #000;"></i></a>
+                            <a href="https://tiktok.com/@domiboard" target="_blank"><i class="fa-brands fa-tiktok fa-1x" style="color: #000;"></i></a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://twitter.com/yourhandle" target="_blank"><i class="fa-brands fa-x-twitter fa-1x"></i> </a>
+                            <a href="https://twitter.com/domiboard" target="_blank"><i class="fa-brands fa-x-twitter fa-1x"></i> </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram fa-1x" style="color: Tomato;"></i></a>
+                            <a href="https://www.instagram.com/domiboard.app"  target="_blank"><i class="fab fa-instagram fa-1x" style="color: Tomato;"></i></a>
                           </li>
-                          <li class="list-inline-item">
-                            <a href="https://www.threads.com/yourprofile" target="_blank"><i class="fa-brands fa-threads fa-1x" style="color: tomato;"></i></a>
-                          </li>
+                         
                         </ul>
                       </div>
                     </div>
