--- a/terms.html
+++ b/terms.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms Of Services - Domiboard</title>
-    <link rel="stylesheet" href="../styles.css"> 
+    <link rel="stylesheet" href="styles.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" href="../FAV-removebg-preview.png" type="image/x-icon">
+    <link rel="icon" href="./images/FAV-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://kit.fontawesome.com/9c0b7a0ad5.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" id="Logo" href="#" style="cursor: none;"><img src="../icon2-removebg-preview.png" alt="Domi Board Logo"
+                <a class="navbar-brand" id="Logo" href="#" style="cursor: none;"><img src="./images/icon2-removebg-preview.png" alt="Domi Board Logo"
                     class="rounded-circle" width="120px"  ></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,8 +22,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/index.html#features">Features</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/index.html#how-it-works">How It Works</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#features">Features</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html#how-it-works">How It Works</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
                     </ul>
                 </div>
